RESOLVED FIXED 128648
Fix assertions and incorrect codegen for CompareEq(ObjectOrOther:, Object:)
https://bugs.webkit.org/show_bug.cgi?id=128648
Summary Fix assertions and incorrect codegen for CompareEq(ObjectOrOther:, Object:)
Filip Pizlo
Reported 2014-02-11 20:13:55 PST
We did CompareEq(Object:, ObjectOrOther:) correctly but the flipped version wrong.
Attachments
the patch (1.52 KB, patch)
2014-02-11 20:15 PST, Filip Pizlo
mark.lam: review+
Filip Pizlo
Comment 1 2014-02-11 20:15:26 PST
Created attachment 223935 [details] the patch
Mark Lam
Comment 2 2014-02-11 20:17:20 PST
Comment on attachment 223935 [details] the patch r=me
Filip Pizlo
Comment 3 2014-02-11 20:18:25 PST
I'll land!
Filip Pizlo
Comment 4 2014-02-11 20:19:56 PST
Note You need to log in before you can comment on or make changes to this bug.