Fix assertions and incorrect codegen for CompareEq(ObjectOrOther:, Object:) https://bugs.webkit.org/show_bug.cgi?id=128648

Reviewed by Mark Lam.

I did CompareEq(Object:, ObjectOrOther:) correctly but the flipped version wrong.
That's what I get for running tests in release mode. It's hard to write a test for
the incorrect codegen; that's kind of why the assertions are there.

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::compileCompareEq):



Canonical link: https://commits.webkit.org/146683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163938 268f45cc-cd09-0410-ab3c-d52691b4dbfc